Clean up imports and random warnings